--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build": "npm install && cd frontend && npm install && npm run build",
-    "postinstall": "cd frontend && npm install && npm run build"
+    "build": "npm install --legacy-peer-deps && cd frontend && npm install --legacy-peer-deps && npm run build",
+    "postinstall": "cd frontend && npm install --legacy-peer-deps && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +32,7 @@
     "nodemon": "^3.1.7"
   }
 }
+
 
 
 
